--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,10 @@
 			<artifactId>spring-boot-starter-tomcat</artifactId>
 			<scope>provided</scope>
 		</dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
 		<!-- SpringBoot-热部署 -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
