--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -80,7 +80,7 @@ logging:
 qmframe: 
   #※※※QmSecurityManager※※※
   security: 
-    start: true #是否开启权限框架
+    start: false #是否开启权限框架
     secret: sahdwaohxicxzoc #Token秘钥
     requestHeaderTokenKey: token #请求数据时,请求头的tokenkey名
   #※※※请求数据设置※※※
