--- a/pom.xml
+++ b/pom.xml
@@ -159,6 +159,11 @@
 		    <artifactId>commons-io</artifactId>
 		    <version>2.6</version>
 		</dependency>
+		<dependency>
+			<groupId>jdom</groupId>
+			<artifactId>jdom</artifactId>
+			<version>1.0</version>
+		</dependency>
 	<!-- 框架依赖包End -->
 	<!-- 开发依赖下面进行粘贴 -->
 	<!-- 	xxxxx
