--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,9 +11,9 @@ spring:
   datasource: #主数据源
     type: 'com.alibaba.druid.pool.DruidDataSource'
     driverClassName: 'com.mysql.cj.jdbc.Driver'
-    url: 'jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf8&autoReconnect=true&useSSL=true' #?useUnicode=true&characterEncoding=utf8&autoReconnect=true&useSSL=true
+    url: 'jdbc:mysql://localhost:3306/test'
     username: 'root'
-    password: '123456'
+    password: '123'
     #下面为连接池的补充设置，应用到上面所有数据源中
     #初始化大小，最小，最大
     initialSize: 5
