--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+			<version>2.1.0.RELEASE</version>
 		</dependency>
 		<!-- SpringBoot-热部署 -->
 		<dependency>
