--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,11 +3,12 @@ server:
   port: 80
   tomcat: 
       url-encoding: UTF-8
-  servlet: 
+  servlet:
     session: 
       timeout: 60
+    context-path: #项目路径
 #※※※※※※※※※※※※SpringBoot基础配置※※※※※※※※※※※※
-spring: 
+spring:
   datasource: #主数据源
     type: 'com.alibaba.druid.pool.DruidDataSource'
     driverClassName: 'com.mysql.cj.jdbc.Driver'
@@ -39,7 +40,7 @@ spring:
     #合并多个DruidDataSource的监控数据
     useGlobalDataSourceStat: true
   # MVC 配置
-  mvc: 
+  mvc:
     #出现错误时, 直接抛出异常
     throw-exception-if-no-handler-found: true
   resources: 
@@ -52,6 +53,14 @@ spring:
     ehcache: 
       #指定ehcache配置文件路径
       config: 'classpath:ehcache.xml'
+  #配置thymeleaf 官方推荐模板引擎
+  thymeleaf:
+    prefix: 'classpath:/views/'
+    suffix: '.html'
+    mode: 'HTML'
+    encoding: 'UTF-8'
+    content-type: 'text/html'
+    cache: false # 开发阶段务必关闭缓存
   #※※※Redis缓存服务器※※※
   redis: 
     database: 0 #Redis数据库索引（默认为0）
