--- a/pom.xml
+++ b/pom.xml
@@ -136,10 +136,18 @@
 			<artifactId>fastjson</artifactId>
 			<version>1.2.47</version>
 		</dependency>
+		<!-- String拓展apachi官方工具 -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-text</artifactId>
+			<version>1.6</version>
+		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
+			<version>3.8.1</version>
 		</dependency>
+
 		<!-- HTTPclient依赖 -->
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
