--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<!-- 包名,项目名,版本 -->
 	<groupId>com.qm</groupId>
 	<artifactId>QMBootFrame</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<packaging>war</packaging>
 	<!-- 项目名 -->
 	<name>QMBootFrame</name>
