--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,8 +4,6 @@ server:
   tomcat: 
       url-encoding: UTF-8
   servlet:
-    session: 
-      timeout: 60
     context-path: #项目路径
 #※※※※※※※※※※※※SpringBoot基础配置※※※※※※※※※※※※
 spring:
@@ -78,40 +76,10 @@ spring:
 #※※※※※※※※※※※※Mybatis※※※※※※※※※※※※
 mybatis:
   type-aliases-package: com.qm.code.entity
-  mapper-locations: 
-  - 'classpath*:com/qm/frame/mybatis/mapper/QmMapper.xml'
-  - 'classpath*:com/qm/code/sql/**/*Mapper.xml'
-  configuration:
-    map-underscore-to-camel-case: false #是否启动数据库下划线自动映射实体
+  mapper-locations:
+  - 'classpath*:**/*Mapper.xml' # 该行配置请勿修改
+  configuration:  #是否启动数据库下划线自动映射实体
+    map-underscore-to-camel-case: false
 #※※※※※※※※※※※※Logger※※※※※※※※※※※※
 logging:
   config: 'classpath:logback-spring.xml'
-
-#※※※※※※※※※※※※QmFrame※※※※※※※※※※※※
-qmframe:
-  #※※※请求数据设置※※※
-  send: 
-    requestDataKey: value #请求数据时，根据该key名解析数据(Rest风格)
-    responseDataKey: value #返回数据时，使用的最外层key名(Rest风格)
-  #※※※阿里Druid后台监控※※※
-  druid: 
-    allow: localhost #白名单
-    deny: #黑名单
-    loginUsername: admin #账号
-    loginPassword: 123 #密码
-    resetEnable: false #是否可重置数据
-  #※※※AES加密设置※※※
-  aes:
-    start: false #是否启用AES对称加密传输
-    key: 'asdhaisodwasihcosancoiwasn' #AES秘钥
-    encoding: UTF-8 #统一使用的编码方式
-    number: 1 #加密次数
-  
-  #※※※版本控制※※※
-  version: 
-    start: false #是否开启版本控制(ture时,每个请求需在header带上version参数,参数值version)
-    version: '1.0.0' #系统目前版本编号
-    permitVersions: #系统容忍请求版本编号(默认允许当前版本)
-    - '1.0.1'
-    - '1.0.2'
-    
