--- a/src/main/resources/qm-frame.properties
+++ b/src/main/resources/qm-frame.properties
@@ -29,5 +29,5 @@ version.start=false
 #\u7CFB\u7EDF\u76EE\u524D\u7248\u672C\u7F16\u53F7
 version.now=1.0.0
 #\u7CFB\u7EDF\u5BB9\u5FCD\u8BF7\u6C42\u7248\u672C\u7F16\u53F7(\u9ED8\u8BA4\u5141\u8BB8\u5F53\u524D\u7248\u672C)
-version.permitVersions-[0]:1.0.1
-version.permitVersions-[1]:1.0.2
+version.allows-[0]:1.0.1
+version.allows-[1]:1.0.2
