--- a/src/main/resources/qm-frame.properties
+++ b/src/main/resources/qm-frame.properties
@@ -31,3 +31,6 @@ version.now=1.0.0
 #\u7CFB\u7EDF\u5BB9\u5FCD\u8BF7\u6C42\u7248\u672C\u7F16\u53F7(\u9ED8\u8BA4\u5141\u8BB8\u5F53\u524D\u7248\u672C)
 version.allows-[0]:1.0.1
 version.allows-[1]:1.0.2
+
+#\u203B\u203B\u203B\u203B\u203B\u203B\u203B\u203B\u203B\u65E5\u5FD7\u8BB0\u5F55\u203B\u203B\u203B\u203B\u203B\u203B\u203B\u203B\u203B
+controller.aop.extend.class=
