--- a/src/main/resources/qm-frame.properties
+++ b/src/main/resources/qm-frame.properties
@@ -20,9 +20,9 @@ aes.encoding=UTF-8
 aes.number=1
 #\u203B\u203B\u203B\u203B\u203B\u203B\u203B\u203B\u203B\u8BF7\u6C42\u6570\u636E\u8BBE\u7F6E\u203B\u203B\u203B\u203B\u203B\u203B\u203B\u203B\u203B
 #\u8BF7\u6C42\u6570\u636E\u65F6\uFF0C\u6839\u636E\u8BE5key\u540D\u89E3\u6790\u6570\u636E(rest\u98CE\u683C)
-request.data-key=value
+body.request.key=value
 #\u8FD4\u56DE\u6570\u636E\u65F6\uFF0C\u4F7F\u7528\u7684\u6700\u5916\u5C42key\u540D(rest\u98CE\u683C)
-response.data-key=value
+body.response.key=value
 #\u203B\u203B\u203B\u203B\u203B\u203B\u203B\u203B\u203B\u7248\u672C\u63A7\u5236\u203B\u203B\u203B\u203B\u203B\u203B\u203B\u203B\u203B
 #\u662F\u5426\u5F00\u542F\u7248\u672C\u63A7\u5236(ture\u65F6,\u6BCF\u4E2A\u8BF7\u6C42\u9700\u5728header\u5E26\u4E0Aversion\u53C2\u6570,\u53C2\u6570\u503Cversion)
 version.start=false
