--- a/src/main/resources/qm-frame.properties
+++ b/src/main/resources/qm-frame.properties
@@ -1,36 +1,36 @@
-#\u203B\u203B\u203B\u203B\u203B\u203B\u203B\u203B\u203B DRUID \u203B\u203B\u203B\u203B\u203B\u203B\u203B\u203B\u203B
-#\u767D\u540D\u5355
+#※※※※※※※※※ DRUID ※※※※※※※※※
+#白名单
 druid.allow=localhost
-#\u9ED1\u540D\u5355
+#黑名单
 druid.deny=
-#\u8D26\u53F7
+#账号
 druid.login.username=admin
-#\u5BC6\u7801
+#密码
 druid.login.password=123
-#\u662F\u5426\u53EF\u91CD\u7F6E\u6570\u636E
+#是否可重置数据
 druid.reset.enable=false
-#\u203B\u203B\u203B\u203B\u203B\u203B\u203B\u203B\u203BAES\u52A0\u5BC6\u8BBE\u7F6E\u203B\u203B\u203B\u203B\u203B\u203B\u203B\u203B\u203B
-#\u662F\u5426\u542F\u7528aes\u5BF9\u79F0\u52A0\u5BC6\u4F20\u8F93
+#※※※※※※※※※AES加密设置※※※※※※※※※
+#是否启用aes对称加密传输
 aes.start=false
-#aes\u79D8\u94A5
+#aes秘钥
 aes.key=asdhaisodwasihcosancoiwasn
-#\u7EDF\u4E00\u4F7F\u7528\u7684\u7F16\u7801\u65B9\u5F0F
+#统一使用的编码方式
 aes.encoding=UTF-8
-#\u52A0\u5BC6\u6B21\u6570
+#加密次数
 aes.number=1
-#\u203B\u203B\u203B\u203B\u203B\u203B\u203B\u203B\u203B\u8BF7\u6C42\u6570\u636E\u8BBE\u7F6E\u203B\u203B\u203B\u203B\u203B\u203B\u203B\u203B\u203B
-#\u8BF7\u6C42\u6570\u636E\u65F6\uFF0C\u6839\u636E\u8BE5key\u540D\u89E3\u6790\u6570\u636E(rest\u98CE\u683C)
+#※※※※※※※※※请求数据设置※※※※※※※※※
+#请求数据时，根据该key名解析数据(rest风格)
 body.request.key=value
-#\u8FD4\u56DE\u6570\u636E\u65F6\uFF0C\u4F7F\u7528\u7684\u6700\u5916\u5C42key\u540D(rest\u98CE\u683C)
+#返回数据时，使用的最外层key名(rest风格)
 body.response.key=value
-#\u203B\u203B\u203B\u203B\u203B\u203B\u203B\u203B\u203B\u7248\u672C\u63A7\u5236\u203B\u203B\u203B\u203B\u203B\u203B\u203B\u203B\u203B
-#\u662F\u5426\u5F00\u542F\u7248\u672C\u63A7\u5236(ture\u65F6,\u6BCF\u4E2A\u8BF7\u6C42\u9700\u5728header\u5E26\u4E0Aversion\u53C2\u6570,\u53C2\u6570\u503Cversion)
+#※※※※※※※※※版本控制※※※※※※※※※
+#是否开启版本控制(ture时,每个请求需在header带上version参数,参数值version)
 version.start=false
-#\u7CFB\u7EDF\u76EE\u524D\u7248\u672C\u7F16\u53F7
+#系统目前版本编号
 version.now=1.0.0
-#\u7CFB\u7EDF\u5BB9\u5FCD\u8BF7\u6C42\u7248\u672C\u7F16\u53F7(\u9ED8\u8BA4\u5141\u8BB8\u5F53\u524D\u7248\u672C)
+#系统容忍请求版本编号(默认允许当前版本)
 version.allows-[0]:1.0.1
 version.allows-[1]:1.0.2
 
-#\u203B\u203B\u203B\u203B\u203B\u203B\u203B\u203B\u203B\u65E5\u5FD7\u8BB0\u5F55\u203B\u203B\u203B\u203B\u203B\u203B\u203B\u203B\u203B
+#※※※※※※※※※日志记录※※※※※※※※※
 controller.aop.extend.class=
