--- a/pom.xml
+++ b/pom.xml
@@ -32,10 +32,16 @@
 		<resources>
 			<resource>
 				<directory>src/main/java</directory>
-				<!--配置添加xml和properties-->
+				<!--配置添加xml,mybatis的xml需要打包-->
 				<includes>
 					<include>**/*.xml</include>
-					<include>**/*.properties</include>
+				</includes>
+			</resource>
+			<resource>
+				<directory>src/main/resources</directory>
+				<!--配置添加resource资源文件下所有文件-->
+				<includes>
+					<include>**/*.*</include>
 				</includes>
 			</resource>
 		</resources>
