--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -53,7 +53,7 @@ spring:
       config: 'classpath:ehcache.xml'
   #配置thymeleaf 官方推荐模板引擎
   thymeleaf:
-    prefix: 'classpath:/views/web/'
+    prefix: 'classpath:/views/'
     suffix: '.html'
     mode: 'HTML'
     encoding: 'UTF-8'
