--- a/src/main/resources/qm-frame.properties
+++ b/src/main/resources/qm-frame.properties
@@ -23,6 +23,8 @@ aes.number=1
 body.request.key=value
 #返回数据时，使用的最外层key名(rest风格)
 body.response.key=value
+#特殊请求不进行解析(包括版本控制和解析json等)-(通常用于第三方API回调等)
+request.special.uri-[0]=/shop/order/payCallBack
 #※※※※※※※※※版本控制※※※※※※※※※
 #是否开启版本控制(ture时,每个请求需在header带上version参数,参数值version)
 version.start=false
@@ -31,6 +33,5 @@ version.now=1.0.0
 #系统容忍请求版本编号(默认允许当前版本)
 version.allows-[0]:1.0.1
 version.allows-[1]:1.0.2
-
 #※※※※※※※※※日志记录※※※※※※※※※
 controller.aop.extend.class=
