--- a/src/main/resources/qm-frame.properties
+++ b/src/main/resources/qm-frame.properties
@@ -23,8 +23,10 @@ aes.number=1
 body.request.key=value
 #返回数据时，使用的最外层key名(rest风格)
 body.response.key=value
-#特殊请求不进行解析(包括版本控制和解析json等)-(通常用于第三方API回调等)
-request.special.uri-[0]=/shop/order/payCallBack
+#特殊请求不进行解析(包括版本控制和解析json等)
+#该配置主要排除第三方API调用接口时特殊请求而框架自动解析json的问题
+#适用于动态配置，例：/user/**
+request.special.uri-[0]=
 #※※※※※※※※※版本控制※※※※※※※※※
 #是否开启版本控制(ture时,每个请求需在header带上version参数,参数值version)
 version.start=false
