--- a/src/main/resources/qm-frame.properties
+++ b/src/main/resources/qm-frame.properties
@@ -1,19 +1,8 @@
-#※※※※※※※※※ DRUID ※※※※※※※※※
-#白名单
-druid.allow=localhost
-#黑名单
-druid.deny=
-#账号
-druid.login.username=admin
-#密码
-druid.login.password=123
-#是否可重置数据
-druid.reset.enable=false
 #※※※※※※※※※AES加密设置※※※※※※※※※
 #是否启用aes对称加密传输
 aes.start=false
 #aes秘钥
-aes.key=asdhaisodwasihcosancoiwasn
+aes.key=ohiah2019sDShdieub51h8910s
 #统一使用的编码方式
 aes.encoding=UTF-8
 #加密次数
@@ -23,6 +12,8 @@ aes.number=1
 body.request.key=value
 #返回数据时，使用的最外层key名(rest风格)
 body.response.key=value
+#返回数据时，默认message的语言 EN/CN
+body.response.message.lang=CN
 #特殊请求不进行解析(包括版本控制和解析json等)
 #该配置主要排除第三方API调用接口时特殊请求而框架自动解析json的问题
 #适用于动态配置，例：/user/**
