--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<groupId>com.qm</groupId>
 	<artifactId>QMBootFrame</artifactId>
 	<version>0.0.1</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<!-- 项目名 -->
 	<name>QMBootFrame</name>
 	<description>Spring-Boot</description>
@@ -118,11 +118,22 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-jdbc</artifactId>
 		</dependency>
-		<!-- Druid -->
+		<!-- Druid 连接池 -->
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>druid</artifactId>
-			<version>1.0.26</version>
+			<version>1.1.10</version>
+		</dependency>
+		<!-- dbcp2 连接池 -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-dbcp2</artifactId>
+		</dependency>
+		<!-- PageHelper 分页插件 -->
+		<dependency>
+			<groupId>com.github.pagehelper</groupId>
+			<artifactId>pagehelper-spring-boot-starter</artifactId>
+			<version>1.2.5</version>
 		</dependency>
 		<!-- @ConfigurationProperties的支持 -->
 		<dependency>
@@ -147,7 +158,6 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.8.1</version>
 		</dependency>
-
 		<!-- HTTPclient依赖 -->
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
