--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,42 +1,13 @@
 #※※※※※※※※※※※※Server※※※※※※※※※※※※
 server:
-  port: 9999
+  port: 80
   tomcat: 
       url-encoding: UTF-8
   servlet:
     context-path: #项目路径
+
 #※※※※※※※※※※※※SpringBoot基础配置※※※※※※※※※※※※
 spring:
-  datasource: #主数据源
-    type: 'com.alibaba.druid.pool.DruidDataSource'
-    driverClassName: 'com.mysql.cj.jdbc.Driver'
-    url: 'jdbc:mysql://localhost:3306/test2'
-    username: 'root'
-    password: '123'
-    #下面为连接池的补充设置，应用到上面所有数据源中
-    #初始化大小，最小，最大
-    initialSize: 5
-    minIdle: 1
-    maxActive: 50
-    #配置获取连接等待超时的时间
-    maxWait: 60000
-    #配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
-    timeBetweenEvictionRunsMillis: 60000
-    #配置一个连接在池中最小生存的时间，单位是毫秒
-    minEvictableIdleTimeMillis: 300000
-    validationQuery: 'SELECT 1 FROM DUAL'
-    testWhileIdle: true
-    testOnBorrow: false
-    testOnReturn: false
-    poolPreparedStatements: false
-    #打开PSCache，并且指定每个连接上PSCache的大小
-    maxPoolPreparedStatementPerConnectionSize: 20
-    #配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
-    filters: 'stat,wall'
-    #通过connectProperties属性来打开mergeSql功能；慢SQL记录
-    connectionProperties: 'druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000'
-    #合并多个DruidDataSource的监控数据
-    useGlobalDataSourceStat: true
   # MVC 配置
   mvc:
     #出现错误时, 直接抛出异常
@@ -80,8 +51,25 @@ mybatis:
   mapper-locations:
   - 'classpath*:**/*Mapper.xml' # 该行配置请勿修改
   configuration:
-    map-underscore-to-camel-case: false #是否启动数据库下划线自动映射实体
+    map-underscore-to-camel-case: true #是否启动数据库下划线自动映射实体
     auto-mapping-behavior: full # resultMap 自动映射级别设置
+
+#※※※※※※※※※※※※ PageHelper 分页插件 ※※※※※※※※※※※※
+pagehelper:
+  # helperDialect 分页插件会自动检测当前的数据库链接，自动选择合适的分页方式。 你可以配置helperDialect属性来指定分页插件使用哪种方言。配置时，可以使用下面的缩写值：
+  # oracle,mysql,mariadb,sqlite,hsqldb,postgresql,db2,sqlserver,informix,h2,sqlserver2012,derby
+  helperDialect: mysql
+  # reasonable 分页合理化参数，默认值为false。
+  # 当该参数设置为 true 时，pageNum<=0 时会查询第一页， pageNum>pages（超过总数时），会查询最后一页。
+  # 默认false 时，直接根据参数进行查询。
+  reasonable: true
+  # supportMethodsArguments 支持通过 Mapper 接口参数来传递分页参数，默认值false，分页插件会从查询方法的参数值中，自动根据上面 params 配置的字段中取值，查找到合适的值时就会自动分页。
+  supportMethodsArguments: true
+  # params为了支持startPage(Object params)方法，增加了该参数来配置参数映射，用于从对象中根据属性名取值， 可以配置 pageNum,pageSize,count,pageSizeZero,reasonable，不配置映射的用默认值， 默认值为pageNum=pageNum;pageSize=pageSize;count=countSql;reasonable=reasonable;pageSizeZero=pageSizeZero。
+  params: count=countSql
+  # 默认值为 false，当该参数设置为 true 时，如果 pageSize=0 或者 RowBounds.limit = 0 就会查询出全部的结果（相当于没有执行分页查询，但是返回结果仍然是 Page 类型）。
+  page-size-zero: true
+
 #※※※※※※※※※※※※Logger※※※※※※※※※※※※
 logging:
   config: 'classpath:logback-spring.xml'
