--- a/src/main/resources/verify.properties
+++ b/src/main/resources/verify.properties
@@ -1,19 +1,25 @@
 # ※※※※※※※※※※※※※※※※※※校验正则配置文件※※※※※※※※※※※※※※※※※※
 # 验证用户名 限制条件：首字符为英文字母,账号长度为5~20位,且不能出现特殊字符
 username=^[A-Za-z][a-zA-Z0-9]{4,19}$
+username.errorMsg=用户名格式错误,首字符为英文字母,账号长度为5~20位,且不能出现特殊字符
 # 正则表达式：验证密码 限制条件：长度为6~20位
 password=^\\w{6,20}$
+password.errorMsg=密码长度必须为6~20位
 # 正则表达式：验证手机号
 mobile=^((17[0-9])|(14[0-9])|(13[0-9])|(15[^4,\\D])|(18[0,5-9]))\\d{8}$
+mobile.errorMsg=手机号格式错误
 # 验证邮箱
 email=^([a-z0-9A-Z]+[-|\\.]?)+[a-z0-9A-Z]@([a-z0-9A-Z]+(-[a-z0-9A-Z]+)?\\.)+[a-zA-Z]{2,}$
+email.errorMsg=邮箱格式错误
 # 验证汉字 3 ~ 10个汉字
 chinese=^[\u4e00-\u9fa5]{3,10}$
-# 验证角色名称 由汉字/字符组成，长度为3~10。
-roleName=^[a-zA-Z\u4e00-\u9fa5]{3,10}$
+chinese.errorMsg=验证汉字失败
 # 验证身份证
 cardId=(^\\d{18}$)|(^\\d{15}$)
+cardId.errorMsg=身份证格式错误
 # 验证URL
 url=http(s)?://([\\w-]+\\.)+[\\w-]+(/[\\w- ./?%&=]*)?
+url.errorMsg=URL格式错误
 # 验证IP地址
 ip=(25[0-5]|2[0-4]\\d|[0-1]\\d{2}|[1-9]?\\d)
+ip.errorMsg=IP格式错误
