--- a/src/main/resources/qm-frame.properties
+++ b/src/main/resources/qm-frame.properties
@@ -14,10 +14,7 @@ body.request.key=value
 body.response.key=value
 #返回数据时，默认message的语言 EN/CN
 body.response.message.lang=CN
-#特殊请求不进行解析(包括版本控制和解析json等)
-#该配置主要排除第三方API调用接口时特殊请求而框架自动解析json的问题
-#适用于动态配置，例：/user/**
-request.special.uri-[0]=
+
 #※※※※※※※※※版本控制※※※※※※※※※
 #是否开启版本控制(ture时,每个请求需在header带上version参数,参数值version)
 version.start=false
@@ -28,3 +25,9 @@ version.allows-[0]:1.0.1
 version.allows-[1]:1.0.2
 #※※※※※※※※※日志记录※※※※※※※※※
 controller.aop.extend.class=
+
+#※※※※※※※※※特殊请求过滤※※※※※※※※※
+#特殊请求不进行解析(包括版本控制和解析json等)
+#该配置主要排除第三方API调用接口时特殊请求而框架自动解析json的问题
+#适用于动态配置，例：/user/**
+request.special.uri-[0]=
